Rework beacon exchanges